JSON Schema to validate FHIR resource
