# src/api/server.js
@@ -1,10 +1,23 @@
 const express = require("express");
 const { connectToDatabase } = require("../db/connectAtlas");
-const bodyParser = require('body-parser');
+const bodyParser = require("body-parser");
+const Ajv = require("ajv");
+const addFormats = require("ajv-formats");
+
+const patientSchema = require("../schemas/patient.json")
 
 const app = express();
-app.use(bodyParser.json());
+const ajv = new Ajv({discriminator: true});
+addFormats(ajv);
 const PORT = 3456;
+
+const validate = ajv.compile(patientSchema);
+
+app.use(bodyParser.json());
+
+app.listen(PORT, () => {
+  console.log(`Server is running on port ${PORT}`);
+});
 
 app.get("/patients", async function (req, res) {
   try {
@@ -21,19 +34,27 @@ app.get("/patients", async function (req, res) {
 
 app.post("/patients", async function (req, res) {
   try {
-      const db = await connectToDatabase();
-      const collection = db.collection("patients");
-      const patient = req.body;
-      const result = await collection.insertOne(patient);
-      console.log("POST made to /patients endpoint");
-      console.log("Patient added");
-      res.status(201).json(result); 
-  } catch (error) {
-      console.error("Error adding patient:", error);
-      res.status(500).json({ error: "Internal server error" });
-  }
-});
+    const isValid = validate(req.body);
 
-app.listen(PORT, () => {
-  console.log(`Server is running on port ${PORT}`);
+    if (!isValid) {
+      console.error("Error validating patient data:", validate.errors);
+      return res.status(400).json({
+        error: "Invalid patient data",
+        errors: validate.errors,
+      });
+    } else {
+      console.log("Patient data is valid");
+    }
+
+    const db = await connectToDatabase();
+    const collection = db.collection("patients");
+    const patient = req.body;
+    const result = await collection.insertOne(patient);
+    console.log("POST made to /patients endpoint");
+    console.log("Patient added");
+    res.status(201).json(result);
+  } catch (error) {
+    console.error("Error adding patient:", error);
+    res.status(500).json({ error: "Internal server error" });
+  }
 });
